--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
       - run: terraform init
+      - run: terraform fmt -check
       - run: terraform validate
       - run: terraform plan
       - run: terraform apply -auto-approve
